Services Pages Added

--- a/src/app/Pages/contact/contact.component.html
+++ b/src/app/Pages/contact/contact.component.html
@@ -19,18 +19,18 @@
         <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
-                    <p class="mil-h3 mil-muted mil-thin">Innovating</p>
-                    <p class="mil-h3 mil-muted">Solutions</p>
-                    <p class="mil-h3 mil-muted mil-thin">Impact</p>
+                    <p class="mil-h3 mil-muted mil-thin">UK</p>
+                    <p class="mil-h3 mil-muted">Facility</p>
+                    <p class="mil-h3 mil-muted mil-thin">Management</p>
                 </div>
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
                         <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">ploywebstudio.com</p>
+                        <p class="mil-h3 mil-muted mil-thin">RABM UK FACILITY MANAGEMENT CO. LTD</p>
                     </div>
                 </div>
             </div>
-        </div>        <!-- preloader end -->
+        </div> <!-- preloader end -->
 
         <!-- scrollbar progress -->
         <div class="mil-progress-track">
@@ -41,10 +41,10 @@
         <!-- menu -->
         
 
-<div class="mil-menu-frame">
+ <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="../index.html" class="mil-logo">PWS.</a>
+                <a href="index.html" class="mil-logo">RABM</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -57,38 +57,39 @@
 
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
-                                    <li class="">
-                                    <a href="../index.html">Homepage</a>
+                                    <li>
+                                        <a href="index.html">Home</a>
                                     </li>
                                     <li class="mil-has-children">
-                                    <a href="#.">Services</a>
-                                    <ul>
-                                        <li class="">
-                                            <a href="../services/seo/index.html">SEO Services</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="../services/marketing/index.html">Data‑Driven Marketing</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="../services/web-development/index.html">Web Design & Development</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="../services/ai/index.html">AI Integration</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="../services/index.html">All services</a>
-                                        </li>
-                                    </ul>
+                                        <a href="#.">Services</a>
+                                        <ul style="list-style-type: disc;">
+                                            <li class="">
+                                                <a href="services/seo/index.html">Buying & selling of own real estate</a>
+                                            </li>
+                                            <li class="">
+                                                <a href="services/marketing/index.html">Property agement on a fee or contract basis</a>
+                                            </li>
+                                            <li class="">
+                                                <a
+                                                    href="services/web-development/index.html">Media representation for brands & property</a>
+                                            </li>
+                                            <li class="">
+                                                <a href="services/ai/index.html">Residents property managementman</a>
+                                            </li>
+                                            <!-- <li class="">
+                                                <a href="services/index.html">All services</a>
+                                            </li> -->
+                                        </ul>
                                     </li>
                                     <li class="">
-                                        <a href="../portfolio/index.html">Portfolio</a>
+                                        <a href="portfolio/index.html">Portfolio</a>
                                     </li>
                                     <li class="mil-active">
-                                        <a href="index.html">Contact</a>
+                                        <a href="contact/index.html">Contact</a>
                                     </li>
-                                    <li class="">
-                                        <a href="../it/index.html" style="font-size: medium;">Italiano</a>
-                                    </li>
+                                    <!-- <li class="">
+                                        <a href="it/index.html" style="font-size: medium;">Italiano</a>
+                                    </li> -->
                                 </ul>
                             </nav>
 
@@ -96,7 +97,7 @@
                     </div>
                 </div>
             </div>
-        </div>        <!-- menu -->
+        </div> <!-- menu -->
 
         <!-- curtain -->
         <div class="mil-curtain"></div>
@@ -105,7 +106,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="../it/index.html" class="mil-logo">PWS.</a>
+                <a href="../it/index.html" class="mil-logo">RABM</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -129,7 +130,7 @@
                     <div class="mil-banner-content mil-center mil-up">
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-center mil-mb-60">
-                                <li><a href="../index.html">Homepage</a></li>
+                                <li><a href="../index.html">Home</a></li>
                                 <li><a href="index.html">Contact</a></li>
                             </ul>
                             <h1 class="mil-mb-60">Get in touch!</h1>
@@ -188,56 +189,60 @@
 
                 <!-- footer -->
                 
-<footer class="mil-dark-bg">
+ <footer class="mil-dark-bg">
                     <div class="mi-invert-fix">
                         <div class="container mil-p-120-60">
                             <div class="row justify-content-between">
                                 <div class="col-md-4 col-lg-4 mil-mb-60">
 
-                                    <div class="mil-muted mil-logo mil-up mil-mb-30">PWS.</div>
+                                    <div class="mil-muted mil-logo mil-up mil-mb-30">RABM</div>
 
-                                    <!-- <p class="mil-light-soft mil-up mil-mb-30">Subscribe to our newsletter:</p>
+                                    <p class="mil-light-soft mil-up mil-mb-30">Subscribe to our newsletter:</p>
 
-                                    <form class="mil-subscribe-form mil-up">
-                                        <input type="email" placeholder="Enter your email">
-                                        <button type="submit" class="mil-button mil-icon-button-sm mil-arrow-place"></button>
-                                    </form> -->
-                                        <h6 class="mil-muted mil-up mil-mb-30">Italy</h6>
+                                        <form class="mil-subscribe-form mil-up">
+                                            <input type="email" placeholder="Enter your email">
+                                            <button type="submit" class="mil-button mil-icon-button-sm mil-arrow-place"></button>
+                                        </form>
+                                    <!-- <h6 class="mil-muted mil-up mil-mb-30">Italy</h6>
 
-                                        <p class="mil-light-soft mil-up">str. piangrande 7 | andora - sv <br />tax id (p.iva) IT01826400093<span class="mil-no-wrap"></span></p>
+                                    <p class="mil-light-soft mil-up">str. piangrande 7 | andora - sv <br />tax id
+                                        (p.iva) IT01826400093<span class="mil-no-wrap"></span></p> -->
 
                                 </div>
                                 <div class="col-md-7 col-lg-6">
                                     <div class="row justify-content-end">
                                         <div class="col-md-6 col-lg-7">
 
-                                            <nav class="mil-footer-menu mil-mb-60">
+                                            <!-- <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
-                                                    <li class="mil-up ">
-                                                        <a href="../index.html">Home</a>
-                                                    </li>
-                                                    <li class="mil-up ">
-                                                        <a href="../services/index.html">Services</a>
-                                                    </li>
-                                                    <li class="mil-up ">
-                                                        <a href="../portfolio/index.html">Portfolio</a>
-                                                    </li>
                                                     <li class="mil-up mil-active">
-                                                        <a href="index.html">Contact</a>
+                                                        <a href="index.html">Home</a>
                                                     </li>
-                                                    
+                                                    <li class="mil-up ">
+                                                        <a href="services/index.html">Services</a>
+                                                    </li>
+                                                    <li class="mil-up ">
+                                                        <a href="portfolio/index.html">Portfolio</a>
+                                                    </li>
+                                                    <li class="mil-up ">
+                                                        <a routerLink="contact">Contact</a>
+                                                    </li>
+
                                                 </ul>
-                                            </nav>
+                                            </nav> -->
 
                                         </div>
                                         <div class="col-md-6 col-lg-5">
 
                                             <ul class="mil-menu-list mil-up mil-mb-60">
-                                                <li><a href="../services/seo/index.html" class="mil-light-soft">SEO Services</a></li>
-                                                <li><a href="../services/marketing/index.html" class="mil-light-soft">Data‑Driven Marketing</a></li>
-                                                <li><a href="../services/web-development/index.html" class="mil-light-soft">Web Design & development</a></li>
-                                                <li><a href="../services/ai/index.html" class="mil-light-soft">AI Integration</a></li>
-                                                <li><a href="../services/index.html" class="mil-light-soft">All services</a></li>
+                                                <li><a href="services/seo/index.html" class="mil-light-soft">Privacy Policy</a></li>
+                                                <li><a href="services/marketing/index.html"
+                                                        class="mil-light-soft">Portfolio</a></li>
+                                                <li><a href="services/web-development/index.html"
+                                                        class="mil-light-soft">Contact</a></li>
+                                                <li><a href="services/ai/index.html" class="mil-light-soft">Byuing & Selling Real Estate</a></li>
+                                                <!-- <li><a href="services/index.html" class="mil-light-soft">All
+                                                        services</a></li> -->
                                             </ul>
 
                                         </div>
@@ -252,7 +257,7 @@
 
                                         <div class="col-md-6 col-lg-5 mil-mb-60">
 
-                                            
+
 
                                         </div>
                                         <div class="col-md-6 col-lg-5 mil-mb-60">
@@ -265,15 +270,25 @@
                                 <div class="col-md-4 col-lg-6 mil-mb-60">
 
                                     <div class="mil-vert-between">
-                                        <div class="mil-mb-30">
+                                        <!-- <div class="mil-mb-30">
                                             <ul class="mil-social-icons mil-up">
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i class="far fa-circle"></i></a></li>
+                                                <li><a href="#." target="_blank" class="social-icon"> <i
+                                                            class="far fa-circle"></i></a></li>
+                                                <li><a href="#." target="_blank" class="social-icon"> <i
+                                                            class="far fa-circle"></i></a></li>
+                                                <li><a href="#." target="_blank" class="social-icon"> <i
+                                                            class="far fa-circle"></i></a></li>
+                                                <li><a href="#." target="_blank" class="social-icon"> <i
+                                                            class="far fa-circle"></i></a></li>
                                             </ul>
-                                        </div>                                          <p class="mil-light-soft mil-up">© Copyright 2025 - PWS. All Rights Reserved. <a href="http://www.iubenda.com/privacy-policy/32296775/legal" rel="noopener" target="_blank" data-no-swup>Privacy policy</a>.</p>
-                                        <p class="mil-light-soft mil-up"><a href="../it/index.html" class="mil-light-soft" style="color:#ffffff;" data-no-swup>italiano</a> | <a href="../index.html"  class="mil-light-soft" style="color:#ffffff;" data-no-swup>english</a></p>
+                                        </div> -->
+                                        <p class="mil-light-soft mil-up">© Copyright 2025 - RABM All Rights Reserved. <a
+                                                href="http://www.iubenda.com/privacy-policy/32296775/legal"
+                                                rel="noopener" target="_blank" data-no-swup>Privacy policy</a>.</p>
+                                        <!-- <p class="mil-light-soft mil-up"><a href="it/index.html" class="mil-light-soft"
+                                                style="color:#ffffff;" data-no-swup>italiano</a> | <a href="index.html"
+                                                class="mil-light-soft" style="color:#ffffff;" data-no-swup>english</a>
+                                        </p> -->
                                     </div>
 
                                 </div>
