--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -65,17 +65,17 @@
                                         <a href="#.">Services</a>
                                         <ul style="list-style-type: disc;">
                                             <li class="">
-                                                <a href="services/seo/index.html">Buying & selling of own real estate</a>
+                                                <a href="service-one/index.html">Buying & selling of own real estate</a>
                                             </li>
                                             <li class="">
-                                                <a href="services/marketing/index.html">Property agement on a fee or contract basis</a>
+                                                <a href="service-two/index.html">Property agement on a fee or contract basis</a>
                                             </li>
                                             <li class="">
                                                 <a
-                                                    href="services/web-development/index.html">Media representation for brands & property</a>
+                                                    href="service-three/index.html">Media representation for brands & property</a>
                                             </li>
                                             <li class="">
-                                                <a href="services/ai/index.html">Residents property managementman</a>
+                                                <a href="service-four/index.html">Residents property managementman</a>
                                             </li>
                                             <!-- <li class="">
                                                 <a href="services/index.html">All services</a>
