--- a/src/app/Pages/services/service-four/service-four.component.html
+++ b/src/app/Pages/services/service-four/service-four.component.html
@@ -387,7 +387,7 @@
 
             <!-- Service A: Buying & Selling -->
             <div class="col-lg-4">
-                <a href="../buy-sell/index.html"
+                <a routerLink="/service-one"
                     class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
                     <h4 class="mil-up mil-mb-30">
                         Buying & <br> Selling
@@ -411,7 +411,7 @@
 
             <!-- Service C: Media Representation -->
             <div class="col-lg-4">
-                <a href="../media-representation/index.html"
+                <a routerLink="/service-three"
                     class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
                     <h4 class="mil-up mil-mb-30">
                         Media <br> Representation
@@ -435,7 +435,7 @@
 
             <!-- Service D: Residents Property Management -->
             <div class="col-lg-4">
-                <a href="../residents-management/index.html"
+                <a routerLink="/service-four"
                     class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
                     <h4 class="mil-up mil-mb-30">
                         Residents <br> Property Management
