--- a/src/app/Pages/services/service-three/service-three.component.html
+++ b/src/app/Pages/services/service-three/service-three.component.html
@@ -369,7 +369,7 @@
 
                             <!-- Service A -->
                             <div class="col-lg-4">
-                                <a href="../buy-sell/index.html"
+                                <a routerLink="service-one"
                                     class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
                                     <h4 class="mil-up mil-mb-30">
                                         Buying & <br> Selling
@@ -393,7 +393,7 @@
 
                             <!-- Service C -->
                             <div class="col-lg-4">
-                                <a href="../media-representation/index.html"
+                                <a routerLink="service-three"
                                     class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
                                     <h4 class="mil-up mil-mb-30">
                                         Media <br> Representation
@@ -417,7 +417,7 @@
 
                             <!-- Service D -->
                             <div class="col-lg-4">
-                                <a href="../residents-management/index.html"
+                                <a routerLink="service-four"
                                     class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
                                     <h4 class="mil-up mil-mb-30">
                                         Residents <br> Property Management
