--- a/src/app/Pages/services/service-two/service-two.component.html
+++ b/src/app/Pages/services/service-two/service-two.component.html
@@ -366,7 +366,7 @@
 
   <!-- Service A: Buying & Selling of Own Real Estate -->
   <div class="col-lg-4">
-    <a href="../buy-sell/index.html" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
+    <a routerLink="/service-one" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
       <h4 class="mil-up mil-mb-30">Buying & <br> Selling</h4>
       <p class="mil-descr mil-up mil-mb-30">
         Purchase and sale of residential and commercial properties for our own portfolio, focused on opportunities and value growth.
@@ -386,7 +386,7 @@
 
   <!-- Service C: Media Representation Services -->
   <div class="col-lg-4">
-    <a href="../media-representation/index.html" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
+    <a routerLink="service-three" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
       <h4 class="mil-up mil-mb-30">Media <br> Representation</h4>
       <p class="mil-descr mil-up mil-mb-30">
         Enhance visibility for property projects and businesses through targeted digital marketing and promotional campaigns.
@@ -406,7 +406,7 @@
 
   <!-- Service D: Residents Property Management -->
   <div class="col-lg-4">
-    <a href="../residents-management/index.html" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
+    <a routerLink="service-four" class="mil-service-card-lg mil-other-card mil-more mil-mb-30">
       <h4 class="mil-up mil-mb-30">Residents <br> Property Management</h4>
       <p class="mil-descr mil-up mil-mb-30">
         Management of buildings and shared developments for owners and residents’ associations, ensuring smooth operations and compliance.
