--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -194,7 +194,7 @@
             <div class="col-lg-6">
                 <div class="mil-up mil-mb-60">
                     <h2 class="mil-mb-60">
-                        About <br>RBIM <span class="mil-thin">UK</span>
+                        About <br>RABM <span class="mil-thin">UK</span>
                     </h2>
 
                     <p class="mil-up mil-mb-30">
@@ -225,7 +225,7 @@ Whether it’s managing an investment property, handling a residential block, pr
             </div>
 
             <!-- Image on RIGHT side -->
-            <div class="col-lg-5">
+            <!-- <div class="col-lg-5">
                 <div class="mil-about-photo mil-mb-90">
                     <div class="mil-lines-place"></div>
                     <div class="mil-up mil-img-frame" style="padding-bottom: 160%;">
@@ -233,7 +233,7 @@ Whether it’s managing an investment property, handling a residential block, pr
                             data-value-1="1" data-value-2="1.2">
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
