--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -65,26 +65,26 @@
                                         <a href="#.">Services</a>
                                         <ul style="list-style-type: disc;">
                                             <li class="">
-                                                <a href="service-one/index.html">Buying & selling of own real estate</a>
+                                                <a routerLink="/service-one/index.html">Buying & selling of own real estate</a>
                                             </li>
                                             <li class="">
-                                                <a href="service-two/index.html">Property agement on a fee or contract basis</a>
+                                                <a routerLink="/service-two/index.html">Property agement on a fee or contract basis</a>
                                             </li>
                                             <li class="">
                                                 <a
-                                                    href="service-three/index.html">Media representation for brands & property</a>
+                                                    routerLink="/service-three/index.html">Media representation for brands & property</a>
                                             </li>
                                             <li class="">
-                                                <a href="service-four/index.html">Residents property managementman</a>
+                                                <a routerLink="/service-four/index.html">Residents property managementman</a>
                                             </li>
                                             <!-- <li class="">
                                                 <a href="services/index.html">All services</a>
                                             </li> -->
                                         </ul>
                                     </li>
-                                    <li class="">
+                                    <!-- <li class="">
                                         <a href="portfolio/index.html">Portfolio</a>
-                                    </li>
+                                    </li> -->
                                     <li class="">
                                         <a href="contact/index.html">Contact</a>
                                     </li>
@@ -337,7 +337,7 @@ Whether it’s managing an investment property, handling a residential block, pr
                                     <div class="row mil-mb-60">
                                         <div class="col-sm-6">
 
-                                            <div class="mil-team-card mil-up mil-mb-30">
+                                            <!-- <div class="mil-team-card mil-up mil-mb-30">
                                                 <img src="img/faces/2.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
@@ -355,7 +355,7 @@ Whether it’s managing an investment property, handling a residential block, pr
                                                         </ul>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div> -->
 
 
 
@@ -367,7 +367,7 @@ Whether it’s managing an investment property, handling a residential block, pr
 
 
 
-                                            <div class="mil-team-card mil-up mil-mb-30">
+                                            <!-- <div class="mil-team-card mil-up mil-mb-30">
                                                 <img src="img/faces/4.jpg" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
@@ -378,7 +378,7 @@ Whether it’s managing an investment property, handling a residential block, pr
                                                         </ul>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div> -->
 
                                         </div>
                                     </div>
