--- a/src/app/Pages/services/service-one/service-one.component.html
+++ b/src/app/Pages/services/service-one/service-one.component.html
@@ -66,22 +66,22 @@
     <a [routerLink]="[]" (click)="toggleDropdown($event)">Services</a>
     <ul style="list-style-type: disc;">
         <li class="mil-active">
-            <a routerLink="/service-one">Buying & selling of own real estate</a>
+            <a routerLink="/service-one/index.html">Buying & selling of own real estate</a>
         </li>
         <li class="">
-            <a routerLink="/service-two">Property management on a fee or contract basis</a>
+            <a routerLink="/service-two/index.html">Property management on a fee or contract basis</a>
         </li>
         <li class="">
-            <a routerLink="/service-three">Media representation for brands & property</a>
+            <a routerLink="/service-three/index.html">Media representation for brands & property</a>
         </li>
         <li class="">
-            <a routerLink="/service-four">Residents property management</a>
+            <a routerLink="/service-four/index.html">Residents property management</a>
         </li>
     </ul>
 </li>
-                                    <li class="">
+                                    <!-- <li class="">
                                         <a href="portfolio/index.html">Portfolio</a>
-                                    </li>
+                                    </li> -->
                                     <li class="">
                                         <a href="contact/index.html">Contact</a>
                                     </li>
@@ -542,18 +542,6 @@
                                 <div class="col-md-4 col-lg-6 mil-mb-60">
 
                                     <div class="mil-vert-between">
-                                        <!-- <div class="mil-mb-30">
-                                            <ul class="mil-social-icons mil-up">
-                                                <li><a href="#." target="_blank" class="social-icon"> <i
-                                                            class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i
-                                                            class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i
-                                                            class="far fa-circle"></i></a></li>
-                                                <li><a href="#." target="_blank" class="social-icon"> <i
-                                                            class="far fa-circle"></i></a></li>
-                                            </ul>
-                                        </div> -->
                                         <p class="mil-light-soft mil-up">© Copyright 2025 - RABM All Rights Reserved. <a
                                                 href="http://www.iubenda.com/privacy-policy/32296775/legal"
                                                 rel="noopener" target="_blank" data-no-swup>Privacy policy</a>.</p>
